Fix input labels attribute and update README
Updated `for` attribute on labels in the form component to correctly match associated input fields, improving accessibility. The changes were made to the `app.component.html` file. The `for` attribute was modified from "name" to "firstName" and "lastName" respectively for consistency and to prevent potential confusion.

Additionally, updated `README.md` to better describe the purpose and functionality of the project. The project title was changed and an illustrative code block was added to demonstrate how a form is structured in the component. Some irrelevant sections were also removed in order to enhance readability. The changes provide more clarity and context to users or different stakeholders who may refer to the README for understanding the project.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class="flex flex-wrap justify-center mt-5">
     <form [formGroup]="formGroup" class="min-w-min justify-center m-4">
         <div class="mb-4">
-            <label class="block text-gray-700" for="name">First Name: </label>
+            <label class="block text-gray-700" for="firstName">First Name: </label>
             <input formControlName="firstName" type="text"
                 class="w-full px-3 py-2 leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
                 id="firstName" placeholder="First Name">
         </div>
     <div class="mb-4">
-        <label class="block text-gray-700" for="name">Last Name: </label>
+        <label class="block text-gray-700" for="lastName">Last Name: </label>
         <input formControlName="lastName" type="text"
             class="w-full px-3 py-2 leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
             id="lastName" placeholder="Last Name">
